##Text encoding: utf-8

2006-01-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: More radioisotopes.
	* glade/curve.glade: added new "Copy" button.
	* glade/gchemcalc.glade: ditto.
	* programs/gchemcalc.cc: implement graphs copying.
	* programs/gchemtable-curve.cc: ditto.

2006-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* po/Makefile.in.in: removed as not required (generated by autogen.sh).
	* programs/gchemtable.desktop.in: new desktop file for stable releases.

2006-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires libgnomeprintui.
	* database/isotopes.xml.in: More radioisotopes.
	* gcu-0.5.pc.in: requires libgnomeprintui.
	* gcu.pc.in: ditto.
	* gcu/gtkchem3dviewer.cc: add print support.
	* gcu/gtkchem3dviewer.h: ditto.
	* programs/gchem3d-viewer.c: ditto.

2006-01-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/chemistry.h: change GcuValue to GcuDimensionalValue in
	GcuAtomicRadius.
	* gcu/element.cc: ditto.
	* gcu/element.h: update Element::GetRadius documentation.
	* glade/eltpage.glade: add support for radii.
	* programs/gchemtable-curve.cc: ditto.
	* programs/gchemtable-elt.cc: ditto.

2006-01-13  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* glade/gchemcalc.glade: Fix a typo.
	* gcu/element.cc: Ditto.
	
2006-01-13  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* configure.ac: Remove a duplicate entry.

2006-01-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: enhance mozilla related test (now supports firefox).
	* gcu/Makefile.am: add gtkcomboperiodic.[c,h].
	* gcu/gtkchem3dviewer.cc: enhance mime type detection.
	* gcu/gtkcomboperiodic.c: new periodic table combo box widget.
	* gcu/gtkcomboperiodic.h: ditto.
	* mozilla-plugin/chem-viewer.cc: supports bgcolor and display3d
	properties; support mol and pdb files.
	* mozilla-plugin/moz-plugin.c: ditto.
	* programs/gchem3d-viewer.c: new menu entries to change display mode