@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2006-01-28  Jean Bréfort  <jean.brefort@normalesup.org>
+	* glade/eltpage.glade: add ionic radii list.
+	* programs/gchemtable-elt.cc: ditto.
+
 2006-01-25  Jean Bréfort  <jean.brefort@normalesup.org>
 	* database/isotopes.xml.in: More radioisotopes.
 	* glade/curve.glade: added new "Copy" button.
